--- a/Testing/mysite/home/templates/addlink.html
+++ b/Testing/mysite/home/templates/addlink.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <form class="signup-form" method="POST" action="/signup/">
+        <form class="signup-form" method="POST" action="">
         {% csrf_token %}
 
         <style>
